@@ -1,0 +1,11 @@
+Title: graphs for fileinfo checks: the size value was displayed without unit information
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+Edition: cre
+State: unknown
+Version: 1.2.8p22
+Date: 1494256217
+
+
